--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,5 +16,9 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 server.port=8082
 
 #RabbitMQ
-spring.rabbitmq.addresses=
+spring.rabbitmq.addresses=amqps://zapstkdf:j0Rm2PJQA5yWTl-XY_o_6yL9_5bqkrRb@woodpecker.rmq.cloudamqp.com/zapstkdf
+
+tagservice.rabbitmq.exchange=etiquetas.exchange
+tagservice.rabbitmq.routingkey=etiqueta.excluida
+tagservice.rabbitmq.queue=etiquetas
 
